# cook-book

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
frontend/: Cargo.toml  index.html
frontend/public/: glue.js  main.css
frontend/src/: footer.rs  glue.rs  header.rs  main.rs  recipes_tree.rs  routes.rs  sidebar.rs  switch.rs  timer.rs
frontend/src/central/: default.rs  mod.rs
frontend/src/components/: active_timers.rs  add_timer_modal.rs  footer.rs  header.rs  mod.rs  paginated_navigation.rs  recipe_tree.rs  sidebar.rs  timer.rs
frontend/src/pages/: default.rs  ingredients_list.rs  loader.rs  mod.rs  recipe_details.rs  recipes_list.rs  services.rs  timer.rs
frontend/src/pages/admin/: ingredient_detail.rs  ingredient_list.rs  mod.rs  recipe_list.rs  services.rs  unit_list.rs
models/: Cargo.toml
models/migrations/2024-01-16-150430_create_receipts/: up.sql
models/migrations/2024-09-12-090712_add_jobs/: down.sql  up.sql
models/migrations/2024-09-16-065440_image_blobs/: down.sql  up.sql
models/src/: lib.rs  models.rs  shared.rs  utils.rs
models/src/database/: job.rs  mod.rs  schema.rs
models/src/database/insertables/: author.rs  category.rs  cuisine.rs  image.rs  ingredient.rs  job.rs  job_log.rs  mod.rs  rating.rs  recipe.rs  recipe_image.rs  recipe_ingredient.rs  step.rs  unit.rs
models/src/database/loadables/: author.rs  category.rs  cuisine.rs  image.rs  ingredient.rs  mod.rs  rating.rs  recipe.rs  step.rs  unit.rs
public/: splashscreen.html
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/2024-01-16-150430_create_receipts/: down.sql  up.sql
src-tauri/src/: commands.rs  loader.rs  main.rs  schema.rs  tests.rs
src-tauri/src/commands/: database.rs  ingredients.rs  job.rs  load.rs  mod.rs  recipes.rs
src-tauri/src/database/: connection.rs  init.rs  insertables.rs  mod.rs  models.rs  pool.rs  schema.rs  wrapper.rs
src-tauri/src/database/insertables/: author.rs  category.rs  cuisine.rs  ingredient.rs  mod.rs  rating.rs  recipe.rs  recipe_ingredient.rs  step.rs  unit.rs
src-tauri/src/parser/: json_parser.rs  mod.rs  natural.rs  parsers.rs
src/components/: Greet.vue
tools/: remline.py
