[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.70", features = ["HtmlButtonElement", "HtmlFormElement", "HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
models = { path = "../models", default-features = false }
wasm-logger = "0.2.0"
log = "0.4.22"
yew-agent = "0.3.0"
chrono = "0.4.38"
