[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
serde_json = "1.0"
regex = "1.10.3"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "extras"], optional = true }
diesel_migrations = { version = "2.1.0", features = [
    "sqlite",
], optional = true }
chrono = { version = "0.4.26", features = ["serde"]}
serde = { version = "1.0.209", features = ["derive"] }
log = "0.4.22"
cfg-if = "1.0.0"

[features]
database = ["diesel", "diesel_migrations"]
