[package]
name = "cook-book"
version = "0.0.0"
description = "A cookbook application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [
    "system-tray",
    "dialog-open",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
regex = "1.10.3"
threadpool = "1.8.1"
log = "0.4.22"
simplelog = "0.12.2"
models = { path = "../models", features = ["database"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
lazy_static = "1.4"
chrono = { version = "0.4.38", features = ["serde"] }
sha2 = "0.10.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
